fixed Overflow issue

--- a/public/style.css
+++ b/public/style.css
@@ -320,9 +320,9 @@ h2 {
     justify-content: space-between;
     align-items: stretch;
     background-color: var(--debugColor);
-    overflow-x: hidden;
+    overflow: hidden;
     padding: 10px 20px;
-    /* resize: horizontal; */
+    resize: horizontal;
 }
 
 .flexContent {
@@ -1080,6 +1080,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .resultIMGlink:hover {
@@ -1096,6 +1097,7 @@ h1 {
     border: 0px solid rgba(0, 0, 0, 0);
     transition: 0.6s;
     z-index: 0;
+    cursor: pointer;
 }
 
 .resultIMGs:hover {
@@ -1104,6 +1106,7 @@ h1 {
     border: 5px solid var(--firstHighlight);
     transition: 0.2s;
     z-index: 10;
+    cursor: pointer;
 }
 
 .resultIMG {
@@ -1111,11 +1114,13 @@ h1 {
     height: 100%;
     object-fit: cover;
     object-position: 50% 50%;
+    cursor: pointer;
 }
 
 .resultIMGlinkXL {
     display: none;
     z-index: 200;
+    cursor: pointer;
 }
 
 .resultIMGlinkXL:hover {
@@ -1131,6 +1136,7 @@ h1 {
     left: 0vw;
     width: 100vw;
     background-color: var(--backgroundDarkener);
+    cursor: pointer;
 }
 
 .resultIMGXL {
@@ -1139,6 +1145,7 @@ h1 {
     object-fit: contain;
     object-position: 50% 50%;
     transform: translate(5%, 5%);
+    cursor: pointer;
 }
 
 /* Gesamte Scrollbar */
